# stormworks

./: game_api.lua  license.md  makefile  readme.md
navlights/: makefile
navlights/src/: controller.lua  selector.lua  ship_draw.lua
radar/src/: radar.lua
radioCommunication/src/: keyboard.lua  radio.lua
screenSwitcher/src/: script.lua
stormworks-externControl/: .gitignore  README.md  config.json  makefile  package-lock.json  package.json  project.code-workspace  requirements.txt
stormworks-externControl/resources/: debug.html  layout.template.html
stormworks-externControl/resources/layouts/: index.xml  vanguard.xml
stormworks-externControl/src/: pyproject.toml
stormworks-externControl/src/front/: app.ts  index.ts  style.scss  utils.ts
stormworks-externControl/src/front/elements/: BoolDisplay.ts  Keypad.ts  NumberDisplay.ts  PushButton.ts  RGBDisplay.ts  RotationSelector.ts  Slider.ts  ToggleButton.ts
stormworks-externControl/src/script/: script.lua
stormworks-externControl/src/stormworks_server/: __main__.py  colors.py  config.py  globals.py  layout.py  server.py  utils.py
stormworks-externControl/src/stormworks_server/elements/: __init__.py  baseElement.py  button.py  component.py  factory.py  group.py  keypad.py  monoLight.py  numberDisplay.py  rgbLight.py  rotationSelector.py  slider.py  utils.py
stormworks-externControl/tests/client/: jasmine.json  utils.test.mjs
stormworks-externControl/tests/server/: test_colors.py  test_config.json  test_config.py  test_elements_utils.py  test_layout.py  test_utils.py
