[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stormworks_server"
version = "0.1.0"
description = "A module for external control in Stormworks"
authors = [
    { name = "Antoine Buirey", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.12"


[tool.setuptools.dynamic]
dependencies = {file = ["../requirements.txt"]}

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "pyproject_hooks==1.2.0",
    "packaging==24.2",
]

[tool.setuptools]
packages = ["stormworks_server", "stormworks_server.elements"]

[project.scripts]
stormworks_server = "stormworks_server.__main__:main"
